Fixed spacing on DAO list and spacing between boosted and non

--- a/src/components/DaoList/DaoList.scss
+++ b/src/components/DaoList/DaoList.scss
@@ -19,10 +19,11 @@
 	border-radius: 3px;
 	position: relative;
 	display: inline-block;
-	margin: 0 15px;
+	margin: 40px 15px;
 	position: relative;
 	left: -15px;
 	text-align: center;
+	top: 10px;
 
 	.daoAvatar {
 		position: absolute;
