--- a/src/components/ViewDao/ViewDao.scss
+++ b/src/components/ViewDao/ViewDao.scss
@@ -74,6 +74,10 @@
   border-radius: 3px;
 }
 
+.proposalsContainer.boostedProposalsContainer {
+  margin: 10px 0 20px 0;
+}
+
 .member {
   padding: 15px;
   border-bottom: $proposal-item-border-bottom;
